2005-07-12  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (cd_cache_new): patch from James Livingston
	<jrl@ids.org.au> to avoid a double-free (Closes: #310114)

2005-07-12  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_get_current_frame): remove unneeded line
	* src/totem-menu.c: (on_play_disc_activate):
	don't free object data from the menu item (Closes: #310108)

2005-07-12  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_get_current_frame): work around
	XINE_STREAM_INFO_VIDEO_RATIO breakage for MPEG streams
	(Closes: #301020)

2005-07-11  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (totem_cd_detect_type_with_url),
	(totem_cd_detect_type):
	* src/plparse/totem-pl-parser.c:
	* src/totem-menu.c: (on_play_disc_activate):
	* src/totem-uri.c: (totem_is_media), (totem_is_block_device):
	* src/totem-uri.h:
	* src/totem.c: (totem_action_load_media_device),
	(totem_action_play_media_device), (totem_action_play_media),
	(totem_action_open_files_list), (totem_action_open_dialog),
	(on_open1_activate), (main):
	* src/totem.h:

	Only support opening discs through either their mountpoint (data
	discs, VCD, DVD), or block device path (all discs)
	cd:, vcd: and dvd: are gone

2005-07-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/totem-mozilla-viewer.c: (totem_embedded_add_children):
	  Realize the widget before showing it, since the realize will create
	  the GdkWindow that we use to embed properly later on when we are
	  being shown. This is essentially a widget bug, too... Should fix
	  the fact that the widget would not embed properly in firefox.

2005-07-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_get_metadata_int):
	  Implement for real.

2005-07-11  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst.c: